improved EXRC and added 8.